# ComputeManager

./: CMakeLists.txt  LICENSE  README.md  test_cuda.cpp  test_opencl.cpp
Cuda/ComputeManager/: ComputeManager.cu  ComputeManager.h  ComputeTypes.h
OpenCL/ComputeManager/: ComputeManager.cpp  ComputeManager.h  ComputeTypes.h  CreateSourceFromFile.cmake  kernel_type.h
